--- a/src/lib/Sidebar/Sidebar.module.scss
+++ b/src/lib/Sidebar/Sidebar.module.scss
@@ -60,17 +60,41 @@
     transition: margin-left 0.2s ease;
 
     &__item {
+        $ctx: &;
         padding: 1rem;
-        border-bottom: 1px solid #ccc;
         display: flex;
-        align-items: center;
-        justify-content: space-between;
         cursor: pointer;
+        align-items: center;
+        transition: all 0.2s ease;
+        justify-content: flex-start;
+        border-bottom: 1px solid #ccc;
 
         &__text {
             font-size: 1rem;
             font-weight: 500;
+            margin-left: 20px;
+        }
+
+        &__icon {
+            width: 20px;
+            height: 20px;
+            svg {
+                width: 100%;
+                height: 100%;
+            }
+        }
+
+        &__text, &__icon path {
             color: black;
+            fill: black;
+        }
+
+        &:hover {
+            background-color: #aaa;
+            #{$ctx}__text, #{$ctx}__icon path {
+                color: white;
+                fill: white;
+            }
         }
     }
 }
@@ -99,8 +123,28 @@
 
     .content {
         &__item {
-            border-bottom: 1px solid #fff;
+            $ctx: &;
             color: #fff;
+            border-bottom: 1px solid #fff;
+
+            &__text {
+                font-size: 1rem;
+                font-weight: 500;
+            }
+    
+            &__text, &__icon path {
+                color: white;
+                fill: white;
+            }
+    
+            &:hover {
+                background-color: #aaa;
+                #{$ctx}__text, #{$ctx}__icon path {
+                    color: black;
+                    fill: black;
+                }
+            }
         }
+
     }
 }
