--- a/src/styles.css
+++ b/src/styles.css
@@ -5,37 +5,39 @@
   font-weight: 400;
 
   color: #0f0f0f;
-  background-color: #f6f6f6;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%; 
+}
+
+body {
+  background-image: url('./images/pexels-ian-beckley-2440021.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100vh;
+  backdrop-filter: blur(5px);
+  position: relative;
+  margin: 0;
+}
+body::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .container {
   margin: 0;
-  padding-top: 10vh;
   display: flex;
+  text-align: left;
   flex-direction: column;
-  justify-content: center;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: 0.75s;
-}
-
-.logo.tauri:hover {
-  filter: drop-shadow(0 0 2em #24c8db);
-}
-
-.row {
-  display: flex;
   justify-content: center;
 }
 
@@ -49,20 +51,16 @@ a:hover {
   color: #535bf2;
 }
 
-h1 {
-  text-align: center;
-}
-
 input,
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
-  font-family: inherit;
   color: #0f0f0f;
+  border-radius: 8px;
+  padding: 0.6em 1.2em;
+  font-family: inherit;
   background-color: #ffffff;
+  border: 1px solid transparent;
   transition: border-color 0.25s;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
 }
@@ -84,14 +82,9 @@ button {
   outline: none;
 }
 
-#greet-input {
-  margin-right: 5px;
-}
-
 @media (prefers-color-scheme: dark) {
   :root {
     color: #f6f6f6;
-    background-color: #2f2f2f;
   }
 
   a:hover {
