--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,6 @@
-// Form container
+@import './fonts.scss';
+@import './utils.scss';
+
 .form {
   &__button {
 
@@ -10,8 +12,18 @@
 }
 
 .page {
-  
+  margin: 10px 0 0 0;
   &__title {
     
   }
+}
+
+main {
+  text-align: left;
+  padding-left: 50px;
+  padding-top: 10px;
+}
+
+h1 {
+  margin-top: 0;
 }
