--- a/src/styles.css
+++ b/src/styles.css
@@ -19,17 +19,17 @@ body {
   background-repeat: no-repeat;
   height: 100vh;
   backdrop-filter: blur(5px);
-  position: relative;
+  position: relative !important;
   margin: 0;
 }
 body::after {
   content: '';
-  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   z-index: -1;
+  position: absolute;
   background-color: rgba(0, 0, 0, 0.5);
 }
 
@@ -51,31 +51,7 @@ a:hover {
   color: #535bf2;
 }
 
-input,
-button {
-  font-size: 1em;
-  font-weight: 500;
-  color: #0f0f0f;
-  border-radius: 8px;
-  padding: 0.6em 1.2em;
-  font-family: inherit;
-  background-color: #ffffff;
-  border: 1px solid transparent;
-  transition: border-color 0.25s;
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
-}
 
-button {
-  cursor: pointer;
-}
-
-button:hover {
-  border-color: #396cd8;
-}
-button:active {
-  border-color: #396cd8;
-  background-color: #e8e8e8;
-}
 
 input,
 button {
