--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,11 +3,75 @@
 
 .form {
   &__button {
+    font-size: 1em;
+    cursor: pointer;
+    font-weight: 500;
+    color: #0f0f0f;
+    border-radius: 8px;
+    padding: 0.6em 1.2em;
+    font-family: inherit;
+    background-color: #ffffff;
+    border: 1px solid transparent;
+    transition: border-color 0.25s;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
 
+    &:hover {
+      border-color: #396cd8;
+    }
+    &:active {
+      border-color: #396cd8;
+      background-color: #e8e8e8;
+    }
+
+    &--primary {
+      background-color: #396cd8;
+      color: #ffffff;
+      border-color: #396cd8;
+      &:hover {
+        background-color: #2e5bb8;
+        border-color: #2e5bb8;
+      }
+      &:active {
+        background-color: #2e5bb8;
+        border-color: #2e5bb8;
+      }
+    }
   }
 
   &__label {
     
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  .form {
+    &__button {
+      background-color: #0f0f0f;
+      color: #ffffff;
+      border-color: #0f0f0f;
+      &:hover {
+        background-color: #1a1a1a;
+        border-color: #1a1a1a;
+      }
+      &:active {
+        background-color: #1a1a1a;
+        border-color: #1a1a1a;
+      }
+
+      &--primary {
+        background-color: #396cd8;
+        color: #ffffff;
+        border-color: #396cd8;
+        &:hover {
+          background-color: #2e5bb8;
+          border-color: #2e5bb8;
+        }
+        &:active {
+          background-color: #2e5bb8;
+          border-color: #2e5bb8;
+        }
+      }
+    }
   }
 }
 
