--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,7 @@
   line-height: 24px;
   font-weight: 400;
 
-  color: #0f0f0f;
+  color: #ffffff;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -60,10 +60,6 @@ button {
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    color: #f6f6f6;
-  }
-
   a:hover {
     color: #24c8db;
   }
@@ -76,4 +72,13 @@ button {
   button:active {
     background-color: #0f0f0f69;
   }
+}
+
+button.inline-btn {
+  background-color: transparent;
+  color: #007bff;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
 }
