--- a/src/lib/Sidebar/Sidebar.module.scss
+++ b/src/lib/Sidebar/Sidebar.module.scss
@@ -1,13 +1,15 @@
 .sidebar {
     $ctx: &;
-    width: 250px;
-    height: 100%;
-    position: fixed;
     top: 0;
     left: 0;
-    background-color: #fff;
-    transition: all 0.2s ease;
     z-index: 1;
+    height: 100%;
+    width: 250px;
+    position: fixed;
+    transition: all 0.2s ease;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    background-color: var(--sidebar-background-color);
 
     &--shrunk {
       transform: translate(-195px, 0);
@@ -21,18 +23,29 @@
         border: 1px solid transparent;
       }
     }
-
+    &__outside {
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 0;
+        position: absolute;
+        transition: width 0.2s ease;
+        &--shrunk {
+            width: 0;
+        }
+    }
     &__header {
-        padding: 0rem 1rem;
         display: flex;
+        padding: 1rem 1rem;
         align-items: center;
         justify-content: space-between;
-        border-bottom: 1px solid #ccc;
+        border-bottom: 1px solid var(--hr-color);
 
         &__title {
             font-size: 1.5rem;
             font-weight: 500;
-            color: black;
+            color: var(--menu-item-text-color);
         }
 
         &__button {
@@ -67,7 +80,7 @@
         align-items: center;
         transition: all 0.2s ease;
         justify-content: flex-start;
-        border-bottom: 1px solid #ccc;
+        border-bottom: 1px solid var(--hr-color);
 
         &__text {
             font-size: 1rem;
@@ -85,66 +98,16 @@
         }
 
         &__text, &__icon path {
-            color: black;
-            fill: black;
+            color: var(--menu-item-text-color);
+            fill: var(--menu-item-text-color);
         }
 
         &:hover {
-            background-color: #aaa;
+            background-color: var(--menu-item-background-hover-color);
             #{$ctx}__text, #{$ctx}__icon path {
-                color: white;
-                fill: white;
+                color: var(--menu-item-text-hover-color);
+                fill: var(--menu-item-text-hover-color);
             }
         }
-    }
-}
-
-// black theme (prefers-color-scheme: dark)
-
-@media (prefers-color-scheme: dark) {
-    .sidebar {
-        background-color: #000;
-        color: #fff;
-
-        &__header {
-            border-bottom: 1px solid #fff;
-
-            &__button {
-                path {
-                    fill: #fff;
-                }
-            }
-        }
-
-        &__title {
-            color: #fff;
-        }
-    }
-
-    .content {
-        &__item {
-            $ctx: &;
-            color: #fff;
-            border-bottom: 1px solid #fff;
-
-            &__text {
-                font-size: 1rem;
-                font-weight: 500;
-            }
-    
-            &__text, &__icon path {
-                color: white;
-                fill: white;
-            }
-    
-            &:hover {
-                background-color: #aaa;
-                #{$ctx}__text, #{$ctx}__icon path {
-                    color: black;
-                    fill: black;
-                }
-            }
-        }
-
     }
 }
