--- a/src/lib/Layout/PageLayout.module.scss
+++ b/src/lib/Layout/PageLayout.module.scss
@@ -55,12 +55,12 @@
   }
   &__title {
     margin: 0;
-    font-size: 20px;
-    font-weight: 600;
-    letter-spacing: 0.5px;
+    font-size: 25px;
+    font-weight: 100;
+    letter-spacing: 1px;
     text-transform: uppercase;
     color: var(--color-text-title);
-    font-family: "Roboto", sans-serif;
+    font-family: "Roboto-Thin", sans-serif;
   }
   &__content {
     padding-left: 60px;
