--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -129,7 +129,7 @@
 }
 
 @font-face {
-    font-family: 'Roboto';
+    font-family: 'Roboto-Thin';
     src: url('Roboto-Thin.eot');
     src: url('Roboto-Thin.eot?#iefix') format('embedded-opentype'),
         url('Roboto-Thin.woff2') format('woff2'),
@@ -151,18 +151,5 @@
         url('Roboto-Regular.svg#Roboto-Regular') format('svg');
     font-weight: normal;
     font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Roboto';
-    src: url('Roboto-ThinItalic.eot');
-    src: url('Roboto-ThinItalic.eot?#iefix') format('embedded-opentype'),
-        url('Roboto-ThinItalic.woff2') format('woff2'),
-        url('Roboto-ThinItalic.woff') format('woff'),
-        url('Roboto-ThinItalic.ttf') format('truetype'),
-        url('Roboto-ThinItalic.svg#Roboto-ThinItalic') format('svg');
-    font-weight: 100;
-    font-style: italic;
     font-display: swap;
 }
