--- a/src/lib/Layout/PageLayout.module.scss
+++ b/src/lib/Layout/PageLayout.module.scss
@@ -70,6 +70,8 @@
     padding-left: 60px;
     padding-right: 60px;
     color: var(--color-text-body);
-    min-height: calc(100vh - 62px);
+    overflow-x: hidden;
+    overflow-y: auto;
+    height: calc(100vh - 62px);
   }
 }
