--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -45,6 +45,28 @@
         background-color: var(--button-primary-hover-background);
       }
     }
+    &--danger {
+      background-color: var(--button-danger-background);
+      color: var(--button-danger-color);
+      path {
+        fill: var(--button-danger-color);
+      }
+      &:hover {
+        color: var(--button-danger-hover-color);
+        background-color: var(--button-danger-hover-background);
+        path {
+          fill: var(--button-danger-hover-color);
+        }
+      }
+      &:active {
+        background-color: var(--button-danger-hover-background);
+      }
+    }
+
+    &--smaller {
+      font-size: 0.8em;
+      padding: 0.4em 1em;
+    }
   }
 
   &__label {
@@ -78,4 +100,24 @@ h1 {
   &__body {
     font-size: 16px;
   }
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
