--- a/src/modules/PdfExcelExtractor/PdfExcelExtractor.module.scss
+++ b/src/modules/PdfExcelExtractor/PdfExcelExtractor.module.scss
@@ -19,16 +19,23 @@
 }
 
 .html_file_controls {
-  top: 5px;
   gap: 10px;
-  right: 20px;
-  z-index: 1001;
   display: flex;
-  position: absolute;
+
   button {
     display: flex;
     align-items: center;
     gap: 5px;
+  }
+
+  &__container {
+    gap: 5px;
+    top: 5px;
+    right: 20px;
+    z-index: 1001;
+    display: flex;
+    position: absolute;
+    flex-direction: column;
   }
 }
 
