--- a/src/lib/Layout/PageLayout.module.scss
+++ b/src/lib/Layout/PageLayout.module.scss
@@ -74,4 +74,71 @@
     overflow-y: auto;
     height: calc(100vh - 62px);
   }
+
+  &__loader {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1001;
+    display: flex;
+    position: fixed;
+    align-items: center;
+    justify-content: center;
+    backdrop-filter: blur(1px);
+    background-color: var(--loader-background-color);
+    &__icon {
+        position: relative;
+        width: 60px;
+        height: 60px;
+        margin: 0 10px;
+    
+        &__bar {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 10px;
+          height: 100%;
+          background-color: #1abc9c;
+          animation: bar-animation 1s ease-in-out infinite;
+    
+          &:nth-child(1) {
+            left: 0;
+            animation-delay: 0s;
+          }
+    
+          &:nth-child(2) {
+            left: 15px;
+            animation-delay: 0.1s;
+          }
+    
+          &:nth-child(3) {
+            left: 30px;
+            animation-delay: 0.2s;
+          }
+    
+          &:nth-child(4) {
+            left: 45px;
+            animation-delay: 0.3s;
+          }
+    
+          &:nth-child(5) {
+            left: 60px;
+            animation-delay: 0.4s;
+          }
+        }
+    }
+  }
+}
+
+@keyframes bar-animation {
+  0% {
+    transform: scaleY(0.1);
+  }
+  50% {
+    transform: scaleY(0.5);
+  }
+  100% {
+    transform: scaleY(0.1);
+  }
 }
