--- a/src/modules/PdfExcelExtractor/PdfExcelExtractor.module.scss
+++ b/src/modules/PdfExcelExtractor/PdfExcelExtractor.module.scss
@@ -3,12 +3,14 @@
   overflow: hidden;
   position: relative;
   width: 100%;
+  z-index: 1 !important;
 }
 .html_file {
   height: 100%;
   overflow: auto;
   position: relative;
   width: 100%;
+  z-index: 1 !important;
   transform-origin: top left;
   transform: scale(1);
   cursor: grab;
@@ -32,7 +34,7 @@
     gap: 5px;
     top: 5px;
     right: 20px;
-    z-index: 1001;
+    z-index: 2;
     display: flex;
     position: absolute;
     flex-direction: column;
@@ -52,7 +54,7 @@
     gap: 5px;
     top: 5px;
     left: 10px;
-    z-index: 1001;
+    z-index: 2;
     display: flex;
     position: absolute;
     flex-direction: column;
