--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
@@ -10,7 +14,7 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%; 
+  -webkit-text-size-adjust: 100%;
 
   --color-text-title: #2c3c3c;
   --color-text-body: #fff;
@@ -23,24 +27,20 @@
   --button-primary-hover-color: #fff;
   --button-primary-hover-background: #2e5bb8;
 
-
   --button-danger-background: #ff0000;
   --button-danger-color: #fff;
   --button-danger-hover-color: #fff;
   --button-danger-hover-background: #ff2000;
-
 
   --button-secondary-color: #000;
   --button-secondary-background: #fff;
   --button-secondary-hover-color: #fff;
   --button-secondary-hover-background: #2e5bb8;
 
-
   --button-info-color: #535bf2;
   --button-info-background: #535bf2;
   --button-info-hover-color: #fff;
   --button-info-hover-background: #2e5bb8;
-
 
   --link-color: #646cff;
   --link-hover-color: #535bf2;
@@ -71,7 +71,7 @@
     --button-danger-background: #ff0000;
     --button-danger-color: #fff;
     --button-danger-hover-color: #fff;
-    --button-danger-hover-background: #ff0F60;
+    --button-danger-hover-background: #ff0f60;
 
     --button-secondary-color: #000;
     --button-secondary-background: #fff;
@@ -97,7 +97,7 @@
 }
 
 body {
-  background-image: url('./images/pexels-ian-beckley-2440021.jpg');
+  background-image: url("./images/pexels-ian-beckley-2440021.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   height: 100vh;
@@ -107,7 +107,7 @@ body {
   overflow: hidden;
 }
 body::after {
-  content: '';
+  content: "";
   top: 0;
   left: 0;
   width: 100%;
@@ -131,7 +131,8 @@ a:hover {
   color: var(--link-hover-color);
 }
 
-input, button {
+input,
+button {
   outline: none;
 }
 
